[webview] Set twistie size to avoid shifting on first load

--- a/media/webview.scss
+++ b/media/webview.scss
@@ -248,8 +248,10 @@ button,
 
 	.twistie {
 		cursor: pointer;
+		height: 16px;
 		position: relative;
-		top: calc(((var(--padding) * 2 + var(--font-size) * var(--line-height)) - 16px) / 2);// Try to center the element
+		top: calc(((var(--padding) * 2 + var(--font-size) * var(--line-height)) - 16px) / 2);
+		width: 16px;// Try to center the element
 	}
 }
 
